force-app/main/default/objects/Account/fields/FIN_ClientID__c.field-meta.xml
<CustomField>
    <fullName>FIN_ClientID__c</fullName>
    <externalId>true</externalId>
    <label>Client ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>