force-app/main/default/objects/Account/fields/FIN_Context__c.field-meta.xml
<CustomField>
    <fullName>FIN_Context__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Context</label>
    <referenceTo>FIN_Context__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>