force-app/main/default/objects/Account/fields/FIN_EntityID__c.field-meta.xml
<CustomField>
    <fullName>FIN_EntityID__c</fullName>
    <externalId>true</externalId>
    <label>Entity ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>