force-app/main/default/objects/Account/fields/FIN_LegalName__c.field-meta.xml
<CustomField>
    <fullName>FIN_LegalName__c</fullName>
    <label>Legal Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>