force-app/main/default/objects/Account/fields/FIN_MailingAddress__c.field-meta.xml
<CustomField>
    <fullName>FIN_MailingAddress__c</fullName>
    <label>Mailing Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>