force-app/main/default/objects/Account/fields/FIN_TaxInformation__c.field-meta.xml
<CustomField>
    <fullName>FIN_TaxInformation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Information</label>
    <referenceTo>FIN_TaxInformation__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>