force-app/main/default/objects/Account/fields/FIN_VenueID__c.field-meta.xml
<CustomField>
    <fullName>FIN_VenueID__c</fullName>
    <label>Venue ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>