force-app/main/default/objects/Account/recordTypes/FIN_Client.recordType-meta.xml
<RecordType>
    <fullName>FIN_Client</fullName>
    <active>true</active>
    <label>Client</label>
</RecordType>