force-app/main/default/objects/Account/recordTypes/FIN_Venue.recordType-meta.xml
<RecordType>
    <fullName>FIN_Venue</fullName>
    <active>true</active>
    <label>Venue</label>
</RecordType>